Revision history for {{$dist->name}}

{{$NEXT}}
  - Remove Module::Build::FFI.  It now has its own distribution.
  - Prefix the lang attribute with an equal '=' sign to indicate a fully qualified
    class name instead of one under FFI::Platypus::Lang

0.45      2016-10-24 07:59:57 -0400
  - Remove check for Threaded Perl / OpenBSD, as the issue there has been reported fixed

0.44      2016-10-20 14:31:23 -0400
  - You can now control which implementation of strdup FFI::Platypus::Memory uses
    via the FFI_PLATYPUS_MEMORY_STRDUP_IMPL environment variable.

0.43      2016-07-08 03:28:57 -0400
  - Numerous fixes for systems with 64bit big-endian arch
    (previously only 32bit big-endian had been tested)
  - Officially discourage the use of FFI::Platypus::Declare

0.42      2016-05-06 16:31:01 -0400
  - Support for MSYS2

0.41      2016-04-09 16:03:07 -0400
  - For the return value undef can be passed in to mean 'void'.
  - Fixed installer bug where ABI probe would silently fail if /tmp
    was mounted noexec
  - Avoid unnecessary downgrade on when Perl is compiled to use longdouble

0.40      2015-08-29 08:45:19 -0400
  - Closure declerations ignore white space between () and ->

0.39      2015-08-24 03:23:10 -0400
  - Fixed spurious warning: auto loading of record class (via FFI::Platypus::Record)
    was ALWAYS warning, when it should have only been warning on load failure.

0.38      2015-08-13 17:13:07 -0400
  - closure method now comes with a more useful diagnostic thinks to
    Carp::croak
  - Added a check for standard C headers.  This seems to help the configure
    stage find ptrdiff_t, which was frequently not detected correctly
    (at least on Linux).
  - Improved thread safety by using MY_CXT for some very infrequently used
    global variables.
  - Added IRC meta data information for metacpan.org.  Please join us at
    #native on irc.perl.org!
  - Many minor documentation corrections and tweaks.  Most significant is