@@ -31,7 +31,6 @@ diag_preamble = | $post_diag = sub {
 diag_preamble = |   eval {
 diag_preamble = |     use Alien::FFI;
 diag_preamble = |     use FFI::Platypus;
-diag_preamble = |     use FFI::Platypus::ConfigData;
 diag_preamble = |     use FFI::Platypus::Memory;
 diag_preamble = |     diag "Alien::FFI version       = ", $Alien::FFI::VERSION;
 diag_preamble = |     diag "Alien::FFI->install_type = ", Alien::FFI->install_type;
@@ -40,8 +39,10 @@ diag_preamble = |     diag "Alien::FFI->libs         = ", Alien::FFI->libs;
 diag_preamble = |     diag "Alien::FFI->dist_dir     = ", eval { Alien::FFI->dist_dir } || 'undef';
 diag_preamble = |     diag "Alien::FFI->version      = ", eval { Alien::FFI->config('version') } || 'unknown';
 diag_preamble = |     spacer();
-diag_preamble = |     my %type_map = %{ FFI::Platypus::ConfigData->config('type_map') };
-diag_preamble = |     my $diag = FFI::Platypus::ConfigData->config('diag');
+diag_preamble = |     use lib 'inc';  require My::ShareConfig;
+diag_preamble = |     my $share_config = My::ShareConfig->new;
+diag_preamble = |     my %type_map = %{ $share_config->get('type_map') };
+diag_preamble = |     my $diag = $share_config->get('diag');
 diag_preamble = |     foreach my $key (sort keys %{ $diag->{args} })
 diag_preamble = |     {
 diag_preamble = |       diag "mb.args.$key=", $diag->{args}->{$key};
@@ -71,7 +72,7 @@ diag_preamble = |       diag sprintf("  %-20s %s", $key, $abi->{$key});
 diag_preamble = |     }
 diag_preamble = |     spacer();
 diag_preamble = |     diag "Probes:";
-diag_preamble = |     my $probe = FFI::Platypus::ConfigData->config("probe");
+diag_preamble = |     my $probe = $share_config->get("probe");
 diag_preamble = |     diag sprintf("  %-20s %s", $_, $probe->{$_}) for keys %$probe;
 diag_preamble = |   };
 diag_preamble = |   diag "extended diagnostic failed: $@" if $@;
@@ -98,9 +99,6 @@ remove = File::Glob
 remove = File::Path
 remove = Text::ParseWords
 
-; comes with THIS distro
-remove = FFI::Platypus::ConfigData
-
 ; comes with Strawberry (only place we use it)
 remove = Win32
 remove = Win32::Process
@@ -112,6 +110,7 @@ Alien::FFI = 0.12
 ExtUtils::CBuilder = 0
 Config::AutoConf = 0.309
 FFI::CheckLib = 0.05
+JSON::PP = 0
 
 [Prereqs / TestPrereqs]
 -phase = test
