@@ -1,0 +1,2 @@
+This readme is a placeholder so
+the directory won't be removed.
